--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "dev": "nodemon server.js",
     "build": "tsc",
     "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Google LLC",
-  "license": "Apache-2.0",
+  "license": "ISC",
   "dependencies": {
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
