--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "express-api-ts",
-  "description": "Simple api sample in Node",
+  "name": "express-api",
+  "description": "Simple API sample in Node.js",
   "version": "1.0.0",
   "main": "server.js",
   "type": "module",
   "scripts": {
     "dev": "nodemon server.js",
-    "build": "tsc",
     "start": "node server.js"
   },
-  "author": "Google LLC",
+  "author": "Your Name",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.9",
@@ -19,9 +18,7 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
-    "@types/node": "^20.12.12",
-    "nodemon": "^3.1.0",
-    "typescript": "^5.4.5"
+    "nodemon": "^3.1.0"
   },
   "keywords": []
 }
